# bindable_properties

./: .clang-format  CMakeLists.txt  README.md
src/: bindable_properties.cpp  bindable_properties.h
tests/: tests.cpp
